@@ -46,6 +46,7 @@ export(geom_segment2)
 export(geom_taxalink)
 export(geom_text2)
 export(geom_tiplab)
+export(geom_tiplab2)
 export(geom_tippoint)
 export(geom_tree)
 export(geom_tree2)
