@@ -1,5 +1,6 @@
 CHANGES IN VERSION 1.3.15
 ------------------------
+ o geom_tiplab2 for adding tip label of circular layout <2016-04-06, Wed>
  o use plot$plot_env to access ggplot2 parameter <2016-04-06, Wed>
  o geom_taxalink for connecting related taxa <2016-04-01, Fri> 
  o geom_range for adding range of HPD to present uncertainty of evolutionary inference <2016-04-01, Fri>
